# marginbt

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PRACTICAL_GATE.md  README.md  USAGE_GUIDE.md
marginbt/: __init__.py  config_validate.py  engine.py  portfolio.py  types.py
marginbt/execution/: __init__.py
marginbt/execution/rule_based/: __init__.py  engine.py  math_utils.py  types.py
scripts/: install_git_hooks.py  verify.py
tests/: conftest.py  edge_cases.py  metrics_semantics.py  regression_snapshot.py  test_edge_cases.py  test_metrics_semantics.py
tests/fixtures/: regression_snapshot.json
